set(COROUTINE_SLEEP_SRC       "coroutine/sleep.cpp")
set(COROUTINE_YIELD_SRC       "coroutine/yield.cpp")
set(REST_CLIENT_SRC           "rest_client/main.cpp")
set(CONSUL_CLIENT_SRC         "consul_client/main.cpp")
set(COROUTINE_FS_WATCH_SRC    "coroutine/fs_watch.cpp")
set(COROUTINE_ECHO_SERVER_SRC "coroutine/echo_server.cpp")
set(COROUTINE_ECHO_CLIENT_SRC "coroutine/echo_client.cpp")

set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/lib")

include_directories("${PROJECT_SOURCE_DIR}/src")
include_directories("${PROJECT_SOURCE_DIR}/deps/curl/include")
include_directories("${PROJECT_SOURCE_DIR}/deps/json/include")
include_directories("${PROJECT_SOURCE_DIR}/deps/libuv/include")
include_directories("${PROJECT_SOURCE_DIR}/deps/spdlog/include")
include_directories("${PROJECT_SOURCE_DIR}/deps/pugixml/include")
include_directories("${PROJECT_SOURCE_DIR}/deps/hiredis/include")

link_directories("${PROJECT_SOURCE_DIR}/lib")
link_directories("${PROJECT_SOURCE_DIR}/deps/curl/lib")
link_directories("${PROJECT_SOURCE_DIR}/deps/libuv/lib")

add_executable(example-coroutine-sleep       ${COROUTINE_SLEEP_SRC})
add_executable(example-coroutine-yield       ${COROUTINE_YIELD_SRC})
add_executable(example-rest-client           ${REST_CLIENT_SRC})
add_executable(example-consul-client         ${CONSUL_CLIENT_SRC})
add_executable(example-coroutine-fs-watch    ${COROUTINE_FS_WATCH_SRC})
add_executable(example-coroutine-echo-server ${COROUTINE_ECHO_SERVER_SRC})
add_executable(example-coroutine-echo-client ${COROUTINE_ECHO_CLIENT_SRC})

target_link_libraries(example-coroutine-sleep sk uv pthread)
target_link_libraries(example-coroutine-yield sk uv pthread)
target_link_libraries(example-coroutine-fs-watch sk uv pthread)
target_link_libraries(example-rest-client sk curl ssl crypto z)
target_link_libraries(example-consul-client sk curl ssl crypto z)
target_link_libraries(example-coroutine-echo-server sk uv pthread)
target_link_libraries(example-coroutine-echo-client sk uv pthread)
